--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+venv
 # C extensions
 *.so
 
@@ -56,3 +56,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+\.idea/
